--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-cli": "^2.0.1",
     "react-native-expo-image-cache": "^3.1.1",
+    "react-native-image-overlay": "^0.1.2",
+    "react-native-off-canvas-menu": "^0.1.32",
     "react-native-slider": "^0.11.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-native-video": "^3.2.0",
     "react-navigation": "^2.11.2",
     "react-photo-gallery": "^6.2.0",
